fix: fix button overlaping in sort block of catalog

--- a/src/styles/components/catalog/_catalog.scss
+++ b/src/styles/components/catalog/_catalog.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  max-width: 100%;
+  max-width: 80%;
   gap: 35px;
 }
 
@@ -144,6 +144,12 @@
       }
     }
   }
+  @media screen and (max-width: 1070px) {
+    .filter-icon {
+      display: none;
+    }
+  }
+
   @media screen and (max-width: 900px) {
     justify-content: center;
     gap: 20px;
@@ -167,9 +173,6 @@
       border-radius: 3px;
       margin: 0;
       gap: 2px;
-    }
-    .filter-icon {
-      display: none;
     }
   }
   @media screen and (max-width: 630px) {
